--- a/build.xml
+++ b/build.xml
@@ -6,94 +6,22 @@ REMEMBER - Change the atlauncher.version property below
 -  
 
 -->
+<project name="ATLauncher" basedir=".">
+    <property name="project.src" value="${basedir}/main"/>
 
-<project name="ATLauncher" basedir="." default="build">
-	<property name="src.dir" value="src" />
-	<property name="build.dir" value="build" />
-	<property name="macapp.dir" value="macapp" />
-	<property name="release.dir" value="release" />
-	<property name="buildsrc.dir" value="${build.dir}/src" />
-	<property name="bin.dir" value="${build.dir}/compiled" />
-	<property name="atlauncher.version" value="3.0.8" />
+	<target name="insertKeys">
+        <echo>Replacing File Contents</echo>
 
-	<target name="build">
-        <mkdir dir="${build.dir}" />
-        <mkdir dir="${release.dir}" />
-
-        <delete dir="${buildsrc.dir}" />
-        <delete dir="${bin.dir}" />
-
-        <mkdir dir="${buildsrc.dir}" />
-        <mkdir dir="${bin.dir}" />
-
-        <mkdir dir="${macapp.dir}" />
-
-        <copy todir="${buildsrc.dir}">
-            <fileset dir="${src.dir}" />
-        </copy>
-
-        <replace file="${buildsrc.dir}/com/atlauncher/data/Settings.java" token="&quot;%VERSION%&quot;;" value="&quot;${atlauncher.version}&quot;;" />
-        <replace file="${buildsrc.dir}/com/atlauncher/gui/LauncherConsole.java" token="%VERSION%" value="${atlauncher.version}" />
-        <replace file="${buildsrc.dir}/com/atlauncher/gui/LauncherFrame.java" token="%VERSION%" value="${atlauncher.version}" />
-
-        <javac srcdir="${buildsrc.dir}" destdir="${bin.dir}" target="1.6" source="1.6" includeantruntime="false" />
-
-        <copy todir="${bin.dir}/resources">
-            <fileset dir="${buildsrc.dir}/resources" includes="**" />
-        </copy>
-
-        <jar destfile="${bin.dir}/ATLauncher.jar" filesetmanifest="mergewithoutmain">
-            <manifest>
-                <attribute name="Main-Class" value="com.atlauncher.App" />
-                <attribute name="Class-Path" value="." />
-            </manifest>
-            <fileset dir="${bin.dir}" />
-        </jar>
-
-        <chmod file="${bin.dir}/ATLauncher.jar" perm="ugo+rwx"/>
-        <copy file="${bin.dir}/ATLauncher.jar" tofile="${release.dir}/ATLauncher.jar"/>
-
-        <exec os="Windows NT" executable="cmd">
-            <arg value="/c" />
-            <arg value="launch4jc.exe" />
-            <arg value=".\launch4j.xml" />
-        </exec>
-
-        <exec os="Windows 8" executable="cmd">
-            <arg value="/c" />
-            <arg value="launch4jc.exe" />
-            <arg value=".\launch4j.xml" />
-        </exec>
-
-        <exec os="Windows XP" executable="cmd">
-            <arg value="/c" />
-            <arg value="launch4jc.exe" />
-            <arg value=".\launch4j.xml" />
-        </exec>
-
-        <exec os="Mac OS X" executable="launch4j">
-            <arg value="launch4j.xml" />
-        </exec>
-
-        <exec os="Linux" executable="launch4j">
-            <arg value="launch4j.xml" />
-        </exec>
-
-        <mkdir dir="${bin.dir}/ATLauncher.app" />
-        <copy todir="${bin.dir}/ATLauncher.app">
-            <fileset dir="${macapp.dir}" includes="**" />
-        </copy>
-        <copy file="${bin.dir}/ATLauncher.jar" tofile="${bin.dir}/ATLauncher.app/Contents/Resources/Java/ATLauncher.jar"/>
-        <copy file="${src.dir}/resources/Icon.icns" tofile="${bin.dir}/ATLauncher.app/Contents/Resources/Icon.icns"/>
-        <replace file="${bin.dir}/ATLauncher.app/Contents/Info.plist" token="%VERSION%" value="${atlauncher.version}" />
-
-        <zip destfile="${release.dir}/ATLauncher.zip">
-            <zipfileset dir="${bin.dir}/" includes="ATLauncher.app/**" excludes="ATLauncher.app/Contents/MacOS/JavaApplicationStub" />
-            <zipfileset dir="${bin.dir}/" includes="ATLauncher.app/Contents/MacOS/JavaApplicationStub" filemode="755" />
-        </zip>
-
-        <delete dir="${bin.dir}/ATLauncher.app"/>
-
-        <delete dir="${build.dir}" />
+        <replace file="${project.src}/com/atlauncher/gui/ConsoleBottomBar.java" token="%PASTECHECKURL%" value="http://paste.atlauncher.com" />
+        <replace file="${project.src}/com/atlauncher/data/Instance.java" token="%PASTECHECKURL%" value="http://paste.atlauncher.com" />
+        <replace file="${project.src}/com/atlauncher/utils/Utils.java" token="%PASTEAPIURL%" value="http://paste.atlauncher.com/api/create" />
+        <replace file="${project.src}/com/atlauncher/data/Settings.java" token='replace("%VERSION"' value='replace("%VERSION%"' />
+        <replace file="${project.src}/com/atlauncher/data/Settings.java" token="%APIURL%" value="http://api.atlauncher.com/log.php" />
+        <replace file="${project.src}/com/atlauncher/data/Settings.java" token="// INSERT SERVERS HERE" value='servers.add(new Server("Auto", "files.atlcdn.net", true));
+            servers.add(new Server("Europe", "eu.atlcdn.net", true));
+            servers.add(new Server("US Central", "uscentral.atlcdn.net", true))
+            servers.add(new Server("US East", "useast.atlcdn.net", true));
+            servers.add(new Server("US West", "uswest.atlcdn.net", true));
+            servers.add(new Server("Master Server", "master.atlauncher.com", true));' />
 	</target>
 </project>
