Updated pom.xml; Need to also fix the problems still with it; also some very minor tweaks

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
                     </includes>
                     <replacements>
                         <replacement>
-                            <token>%PASTECHECKURL</token>
+                            <token>%PASTECHECKURL%</token>
                             <value>${project.paste.check.url}</value>
                         </replacement>
                         <replacement>
