--- a/macapp/Contents/Info.plist
+++ b/macapp/Contents/Info.plist
@@ -2,34 +2,38 @@
 <!DOCTYPE plist SYSTEM "file://localhost/System/Library/DTDs/PropertyList.dtd">
 <plist version="0.9">
 <dict>
-	<key>CFBundleName</key>
-	<string>ATLauncher</string>
-	<key>CFBundleIdentifier</key>
-	<string>com.atlauncher.App</string>
-	<key>CFBundleVersion</key>
-	<string>%VERSION%</string>
-	<key>CFBundleAllowMixedLocalizations</key>
-	<string>true</string>
-	<key>CFBundleExecutable</key>
-	<string>JavaApplicationStub</string>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleIconFile</key>
-	<string>Icon.icns</string>
+    <key>CFBundleName</key>
+    <string>${bundleName}</string>
+    <key>CFBundleVersion</key>
+    <string>${version}</string>
+    <key>CFBundleAllowMixedLocalizations</key>
+    <string>true</string>
+    <key>CFBundleExecutable</key>
+    <string>${cfBundleExecutable}</string>
+    <key>CFBundleDevelopmentRegion</key>
+    <string>English</string>
+    <key>CFBundlePackageType</key>
+    <string>APPL</string>
+    <key>CFBundleSignature</key>
+    <string>????</string>
+    <key>CFBundleInfoDictionaryVersion</key>
+    <string>6.0</string>
+    <key>CFBundleIconFile</key>
+    <string>${iconFile}</string>
 	<key>Java</key>
 	<dict>
-		<key>WorkingDirectory</key>
-		<string>$APP_PACKAGE/Contents/Resources/Java</string>
-		<key>MainClass</key>
-		<string>com.atlauncher.App</string>
-		<key>ClassPath</key>
-			<string>$JAVAROOT/ATLauncher.jar</string>
+        <key>WorkingDirectory</key>
+        <string>$APP_PACKAGE/Contents/Resources/Java</string>
+        <key>MainClass</key>
+        <string>${mainClass}</string>
+        <key>JVMVersion</key>
+        <string>${jvmVersion}</string>
+        <key>ClassPath</key>
+        ${classpath}
+        #if($vmOptions)
+        <key>VMOptions</key>
+        <string>${vmOptions}</string>
+        #end
 	</dict>
 </dict>
 </plist>
