--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <version>1.1.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-core</artifactId>
+            <version>3.0.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
