--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,9 @@
         <mainclass>com.atlauncher.App</mainclass>
     </properties>
 
+    <!-- Make Sure to change the connection to your preferred method -->
     <scm>
-        <connection>scm:git:https://github.com/ATLauncher/ATLauncher.git</connection>
+        <connection>scm:git:ssh:git@github.com:ATLauncher/ATLauncher.git</connection>
         <developerConnection>scm:git:https://github.com/ATLauncher/ATLauncher.git</developerConnection>
         <url>http://github.com/ATLauncher/ATLauncher</url>
     </scm>
