--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <!-- Make Sure to change the connection to your preferred method -->
     <scm>
-        <connection>scm:git:ssh://github.com/ATLauncher/ATLauncher.git</connection>
+        <connection>scm:git:https://github.com/ATLauncher/ATLauncher.git</connection>
         <developerConnection>scm:git:https://github.com/ATLauncher/ATLauncher.git</developerConnection>
         <url>http://github.com/ATLauncher/ATLauncher</url>
     </scm>
@@ -75,17 +75,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-scm-plugin</artifactId>
                 <version>1.9</version>
-                <executions>
-                    <execution>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>checkin</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <configuration>
                     <connectionType>connection</connectionType>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>checkin</goal>
+                        </goals>
+                        <id>commit</id>
+                        <phase>install</phase>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
